--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.20.0",
     "echarts": "^4.9.0",
+    "jwt-decode": "^3.1.2",
     "mat-table-exporter": "^10.2.4",
     "moment": "^2.29.1",
     "ng-apexcharts": "^1.6.0",
