Agregando la funcionalidad de crear publicaciones

--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "ng-pick-datetime": "^7.0.0",
     "ng2-charts": "^2.4.2",
     "ng2-dragula": "^2.1.1",
+    "ngx-bootstrap": "^10.2.0",
+    "ngx-input-file": "10.2.0",
     "ngx-color-picker": "^11.0.0",
     "ngx-dropzone-wrapper": "^10.0.1",
     "ngx-echarts": "^8.0.1",
